--- a/front-end/components/map/ScreenCapture/screen.css
+++ b/front-end/components/map/ScreenCapture/screen.css
@@ -18,22 +18,21 @@
   height: 100%;
   width: 100%;
   position: absolute;
-  border: none !important;
-  /* border-image: !important; */
+  border: none;
 }
 
 .crosshairs::before {
   left: -100%;
   top: -100%;
-  border-right: 1px solid rgba(255, 255, 255, 0.3) !important;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3) !important;
+  border-right: 1px solid rgba(255, 255, 255, 0.3);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .crosshairs::after {
   left: 0px;
   top: 0px;
-  border-top: 1px solid rgba(255, 255, 255, 0.3) !important;
-  border-left: 1px solid rgba(255, 255, 255, 0.3) !important;
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .overlay {
@@ -43,11 +42,13 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  
 }
 
-.overlay.highlighting {
-  background: none;
-  border-color: rgba(0, 0, 0, 0.5);
-  border-style: solid;
+.capture-region {
+  position:fixed;
+  z-index: 10000000;
+  left: 0px;
+  top: 0px;
+  transform: translate(-50%, -50%);
+  background: rgba(255, 255, 255, 0.4);
 }
