--- a/front-end/components/map/ScreenCapture/screen.less
+++ b/front-end/components/map/ScreenCapture/screen.less
@@ -1,30 +1,30 @@
 
-.crosshairs {
-  height: 100%;
-  position: absolute;
-  width: 100%;
-  z-index: 2147483645;
-  &::before,
-  &::after {
-    content: "";
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  border: none;
-  }
-  &::before {
-    left: -100%;
-    top: -100%;
-    border-right: 1px solid rgba(255, 255, 255, 0.3);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  }
-  &::after {
-    left: 0px;
-    top: 0px;
-    border-top: 1px solid rgba(255, 255, 255, 0.3);
-    border-left: 1px solid rgba(255, 255, 255, 0.3);
-  }
-}
+// .crosshairs {
+//   height: 100%;
+//   position: absolute;
+//   width: 100%;
+//   z-index: 2147483645;
+//   &::before,
+//   &::after {
+//     content: "";
+//   height: 100%;
+//   width: 100%;
+//   position: absolute;
+//   border: none;
+//   }
+//   &::before {
+//     left: -100%;
+//     top: -100%;
+//     border-right: 1px solid rgba(255, 255, 255, 0.3);
+//     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+//   }
+//   &::after {
+//     left: 0px;
+//     top: 0px;
+//     border-top: 1px solid rgba(255, 255, 255, 0.3);
+//     border-left: 1px solid rgba(255, 255, 255, 0.3);
+//   }
+// }
 .overlay {
   position: fixed;
   top: 0;
@@ -32,10 +32,11 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
 }
-.capture-region {
-  position: fixed;
-  z-index: 10000000;
-  transform: translate(-50%, -50%);
-  background: rgba(255, 255, 255, 0.4);
-}
+// .capture-region {
+//   position: fixed;
+//   z-index: 10000000;
+//   transform: translate(-50%, -50%);
+//   background: rgba(255, 255, 255, 0.4);
+// }
